--- a/visiting-residents/index.html
+++ b/visiting-residents/index.html
@@ -265,40 +265,14 @@ width:100%
 <p>Residential care homes have fared well when compared to nursing homes when it comes to to dealing with the COVID-19 pandemic. We have worked very hard to develop a policy that will keep our residents safe from potentially life threatening virus <u>while providing them access to the friends and family that make life worth living.</u></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:paragraph --></p>
-<p>Visiting hours are from 9 am to 6 pm, seven day a week. <br>Only one person may visit Caring Hearts Cottage at a time.&nbsp;<br>We have a large outdoor area with lots of comfortable seating and tables.&nbsp; We encourage you to visit with your loved ones there whenever possible.&nbsp;</p>
-<p><strong>All visits must be 60 minutes or less.</strong> <br>Up to two designated visitors may visit a Resident in a day. <br>Visits are scheduled in advance with the Administrator. Call Aaron at (760)-600-9492</p>
+<p>Visiting hours are from 10 am to 8 pm, seven days a week. <br> <br>Please call ahead to let us know you are coming so that we dont have something already scheduled for your loved one.  Call Aaron at (760)-600-9492</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:paragraph --></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
 <h4>What to Expect</h4>
 <p><!-- /wp:heading --></p>
-<p><!-- wp:list --></p>
-<ul>
-<li>Upon arrival, each visitor will be screened with a series of questions and a temperature check.
-<ul>
-<li>We are screening for COVID-19 exposure and potential symptoms.</li>
-<li>If a visitor does not meet the requirements to enter the house, they will be turned away and encouraged to utilize an electronic form of communication such as Apple FaceTime or Zoom.</li>
-</ul>
-</li>
-<li>Upon entry to the house each visitor will be required to:
-<ul>
-<li>Sanitize their hands</li>
-<li>Wear a mask (their own or one provided by us) and gown (provided by us)</li>
-<li>Provide Caregiver with their name to be signed in</li>
-<li>Go directly to the Resident’s room and remain there during their visit.</li>
-</ul>
-</li>
-<li>At the end of each visit, the visitor must deposit borrowed gowns and masks in the laundry bin near the front door and promptly leave the house so that we may sanitize and prepare for other visitors.</li>
-</ul>
-<p><!-- /wp:list --></p>
-<p><!-- wp:paragraph --></p>
-<p>If a <strong>Resident begins to display symptoms</strong> related to<br>COVID-19, that Resident will be quarantined and that Resident’s visitors<br>will be limited to essential care personnel. We will inform other<br>Residents’ visitors of the potential for exposure, and they may choose<br>whether to continue visiting.</p>
-<p><!-- /wp:paragraph --></p>
-<p><!-- wp:paragraph --></p>
-<p>If a <strong>Resident is confirmed to have active COVID-19</strong><br>that Resident will be quarantined and we will discontinue visits to all<br>Residents, except by essential care personnel, until further notice.</p>
-<p><!-- /wp:paragraph --></p>
-<p><!-- wp:heading {"level":4} --></p>
+
 <h4>Electronic Communication</h4>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
